--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,20 @@
+spring:
+  output:
+    ansi:
+      enabled: ALWAYS
+  datasource:
+    url: jdbc:mysql://localhost:3309/microservices
+    username: root
+    password: root
+  jpa:
+    open-in-view: false
+    hibernate:
+      ddl-auto: update
+  devtools:
+    add-properties: false
+  main:
+    banner-mode: off
+
 eureka:
   instance:
     prefer-ip-address: true
@@ -7,7 +24,10 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
-spring:
-  output:
-    ansi:
-      enabled: ALWAYS
+logging:
+  level:
+    org:
+      springframework: WARN
+      hibernate: WARN
+    com:
+      zaxxer: WARN
